--- a/Frontend/havenly-frontend/src/assets/css/main.scss
+++ b/Frontend/havenly-frontend/src/assets/css/main.scss
@@ -220,6 +220,8 @@ body {
     color: #e86f52;
   }
 
+  // for desktop profile view
+
   .navSidebar.activeOne {
     left: 0;
   }
@@ -2114,12 +2116,11 @@ body {
 
   .card-box {
     width: 100%;
-    height: auto;
+    height: 330px;
     border-radius: 10px;
     padding-top: 50px;
     padding-left: 25px;
     padding-right: 25px;
-    padding-bottom: 25px;
     background-color: #fff;
     box-shadow: inset 0px 0px 5px rgba(0, 0, 0, 0.1);
     margin-bottom: 20px;
@@ -2136,6 +2137,8 @@ body {
     }
 
     .inner-box {
+      width: 100%;
+      height: 250px;
       padding: 25px;
       border-radius: 10px;
       margin: auto;
@@ -2180,8 +2183,14 @@ body {
         }
       }
 
+      .content {
+        .truncation-text {
+          color: #e86f52;
+        }
+      }
+
       &:hover {
-        box-shadow: 0px 6px 20px 4px rgba(0, 0, 0, 0.2);
+        box-shadow: 0px 6px 20px 4px rgba(0, 0, 0, 0.3);
       }
     }
   }
@@ -3122,13 +3131,17 @@ body {
         background-color: transparent;
 
         .nav-link {
-          transition: all 0.2s ease-in-out;
+          // transition: all 0.2s ease-in-out;
           border-radius: 30px;
           background-color: transparent;
           color: #000;
           cursor: pointer;
-          border-radius: 20px;
-          padding: 8px 20px;
+          border-radius: 21px;
+          padding: 7px 20px;
+
+          .v-icon {
+            transition: none !important;
+          }
 
           &:hover {
             background-color: #e86f52;
@@ -3141,6 +3154,136 @@ body {
             box-sizing: 0px 6px 24px 2px rgba(0, 0, 0, 0.4);
           }
         }
+
+        /* desktop profile edit start */
+        .profile-btn,
+        .profile-close-btn {
+          width: 110px;
+          height: 40px;
+          text-transform: capitalize;
+        }
+        .profile-btn {
+          background-color: #525252;
+          color: #fff;
+        }
+
+        .profile-card-on-nav {
+          width: 250px;
+          height: 270px;
+          background-color: #fff;
+          border-radius: 10px;
+          position: absolute;
+          margin-top: 10px;
+          margin-right: -6px;
+          top: 10;
+          right: 0;
+          transform: translateY(-500px);
+          transition: all 0.3s ease-in-out;
+          //animation: flip-horizontal-bck 0.4s cubic-bezier(0.455, 0.030, 0.515, 0.955) both;
+          //animation: slide-left-manual 0.3s ease-in-out;
+
+          .top-profile {
+            width: 100%;
+            height: 110px;
+            position: relative;
+            overflow: hidden;
+
+            .img-container {
+              width: 100px;
+              height: 100px;
+              overflow: hidden;
+              border-radius: 50%;
+              border-width: 4px;
+              border-style: solid;
+              margin-top: 3px;
+              //border-color: #e86f52 #e86f52 #e86f52 #525252;
+              border-color: #e86f52;
+              transform: rotate(-45deg);
+              //box-shadow: 0px 6px 26px 1px rgba(0, 0, 0, 0.3);
+
+              .v-img {
+                transform: rotate(45deg);
+                width: 100%;
+                height: 100%;
+                border-radius: 50%;
+                border: 4px solid #fff;
+              }
+            }
+          }
+
+          .top-profile::before,
+          .top-profile::after {
+            content: "";
+            position: absolute;
+          }
+
+          .top-profile::before {
+            width: 100%;
+            height: 70%;
+            background-color: #e86f52;
+          }
+
+          .header {
+            text-align: center;
+
+            h4 {
+              color: #e86f52;
+            }
+          }
+
+          .action-btns {
+            width: 75%;
+            margin: auto;
+            position: relative;
+
+            .dash-btn {
+              text-transform: capitalize;
+              border: 1px solid red;
+              width: 100%;
+              height: 50px;
+              background-color: #e86f52;
+              color: #fff;
+              transition: all 0.2s ease-in-out;
+
+              .v-icon {
+                margin-left: -30px;
+                font-size: 20px;
+              }
+
+              &:hover {
+                color: #525252;
+
+                .v-icon {
+                  color: #fff !important;
+                }
+              }
+            }
+
+            .out-btn {
+              text-transform: capitalize;
+              position: absolute;
+              z-index: 1;
+              top: 0;
+              right: 0;
+              margin-right: -1px;
+
+              .v-icon {
+                font-size: 20px;
+                font-weight: bolder;
+              }
+
+              &:hover {
+                color: #fff;
+                background-color: #525252;
+              }
+            }
+          }
+        }
+
+        .profile-card-on-nav.card-display {
+          transform: translateY(0px);
+        }
+        /* desktop profile edit end */
       }
     }
   }
